<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sleekdeveloper.android.remindme.createtask.CreateTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createTaskLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sleekdeveloper.android.remindme.createtask.CreateTaskFragment">

        <EditText
            android:id="@+id/editTaskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:text="@={viewmodel.title}"
            app:layout_constraintEnd_toStartOf="@+id/saveTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setTaskDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="@dimen/task_date_drawable_padding"
            android:onClick="@{() -> viewmodel.pickDate()}"
            android:text="@string/schedule_due_date"
            app:drawableLeftCompat="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintEnd_toStartOf="@+id/setTaskTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTaskTitle" />

        <TextView
            android:id="@+id/setTaskTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/task_time_drawable_padding"
            android:onClick="@{() -> viewmodel.pickTime()}"
            android:text="@string/set_time"
            app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="@+id/setTaskDate"
            app:layout_constraintEnd_toStartOf="@+id/setTaskRepeat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/setTaskDate" />

        <Spinner
            android:id="@+id/setTaskRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/task_time_drawable_padding"
            android:selection="@={viewmodel.selectedOptionIndex}"
            app:drawableLeftCompat="@drawable/ic_baseline_cached_24"
            app:layout_constraintBottom_toBottomOf="@+id/setTaskTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/setTaskTime"
            app:spinner_items="@{viewmodel.taskRepeatOptionNames}"
            tools:listitem="@layout/task_repeat_spinner"
            tools:text="@string/task_daily" />

        <ImageButton
            android:id="@+id/saveTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.createTask()}"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            app:layout_constraintBottom_toBottomOf="@+id/editTaskTitle"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>