...
                    android:drawablePadding="@dimen/task_time_heading_drawable_padding"
                    android:text="@string/upcoming"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_baseline_assignment_24" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcomingTasksList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:task_list_items="@{viewmodel.upcomingTasks}"
                    tools:itemCount="@integer/upcoming_tasks_count"
...
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTaskFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
...
